--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -10,7 +10,11 @@
 <body style="font-family: Heiti SC,Droidsansfallback,MicrosoftYaHei,Helvetica,Arial,sans-serif; margin-left: auto; margin-right: auto; width: 95%; max-width: 800px;">
 <h2>好东西周报</h2> 
 
-好东西传送门每周推送总结
+<p><a href="http://www.weibo.com/haoawesome/">@好东西传送门</a> 每周推送总结</p>
+
+<p>“好东西传送门”支持微博上的知识传播，集成微博好人好东西，帮您快速解决问题，为您精选专业知识</p>
+
+<p>订阅：hao@memect.com 发封邮件，标题是 " 订阅好东西周报 " </p>
 
 <ul>
    <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=91bf458822">好东西周报 2014-10-25至2014-10-31</a></li>
