--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -14,7 +14,7 @@
 
 <p>“好东西传送门”支持微博上的知识传播，集成微博好人好东西，帮您快速解决问题，为您精选专业知识</p>
 
-<p>订阅：hao@memect.com 发封邮件，标题是 " 订阅好东西周报 " </p>
+<p>订阅：<a href="mailto:hao@memect.com?subject=%E8%AE%A2%E9%98%85%E5%A5%BD%E4%B8%9C%E8%A5%BF%E5%91%A8%E6%8A%A5%20from%20homepage" target="_blank">hao@memect.com</a> 发封邮件，标题是 " 订阅好东西周报 " </p>
 
 <ul>
    <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=91bf458822">好东西周报 2014-10-25至2014-10-31</a></li>
