--- a/draft/2014-11-07.html
+++ b/draft/2014-11-07.html
@@ -21,45 +21,25 @@
           过去一周最受欢迎的推荐有：
         </p>
         <ul>
-          <li>这个入门系列博文非常好，节约初学者啃大不部头的时间。推荐到今天的微信摘要版： http://t.cn/R7HNHFw (253)
+          <li>研究者July的数据挖掘博文系统汇总 (253)
           </li>
-          <li>推荐一组和地图相关的资源：city-data有美国所有城市的数据统计，从房地产到犯罪应有尽有。制造发布自己的地图可以用Mapbox，cartodb，OpenLayers。要在自己的应用内嵌地图可以用Modest Maps，amCharts，Leaflet。地图数据分析有GeoCommons 完整列表 http://t.cn/RPTVPeD (122)
+          <li>city-data等一组和地图相关的资源 (122)
           </li>
-          <li>Big Data Analytics Beyond Hadoop 第一章预览http://t.cn/R70aCGK 本章中作者总结了三代机器学习算法实现的演化：第一代非分布式的， 第二代工具如Mahout和Rapidminer实现基于Hadoop的扩展，第三代如Spark和Storm实现了实时和迭代数据处理。中文摘要（作者 -之诸暇）http://t.cn/RvtTFtX (105)
+          <li>三代机器学习算法实现的演化 (105)
           </li>
-          <li>Quora值得一读的讨论：为什么深度学习让其他机器学习算法相形见绌？参与人中有Google DeepMind团队的Jack Rae (86)
+          <li>Quora讨论：深度学习会不会让其他机器学习算法过时？ (86)
           </li>
-          <li>总结各位的增补 @星空下的巫师《学习OpenCV》@Nobunaga_Means《computer&amp;machine vision》@路确实脚下 《Moden computer vision》 (86)
+          <li>计算机视觉的四部奇书 (86)
           </li>
-          <li>@丕子 开启的讨论：PCA, SVD 阐述最本质原理的文章？ 比特征值和特征向量更低层的？各路高手纷纷表达了自己的意见，汇总在这里（issue 318） http://t.cn/R7TfwMN 也见长微博 (82)
+          <li>@丕子 开启的讨论：PCA, SVD 阐述最本质原理的文章？ (82)
           </li>
-          <li>@需要哆啦A梦的不只... 问：求社会网络的入门资料 @panjf1987 总结了一个书和经典论文清单，如《网络、群体与市场 》《Statistical mechanics of complex networks》《引爆点：如何制造流行》《六度分隔》《微观动机与宏观行为》等，另有三门Coursera课程 http://t.cn/R7Ebg12 (76)
+          <li>求社会网络的入门资料   (76)
           </li>
-          <li>很有用的一个Python小工具dedupe，可以在csv或者数据里做数据去重（data deduplication）和实体消解（entity-resolution） Github http://t.cn/R7OkNyx 项目文档 http://t.cn/R7OkNyI 例子http://t.cn/R7OkNyM (57)
-          </li>
-          <li>//@DP金澜涛: 第一个tutorials是关于实时数据流mining的，part I比较偏理论，对构建实时数据仓库可能有帮助。part II偏实践，除了简单介绍S4,Storm等工具以外，介绍了一些流式mining的概念和思想，非学术帝们也能看得懂，不错的tutorials。 (54)
+          <li>做数据去重和实体消解的Python小工具dedupe (57)
           </li>
           <li>IEEE BigData 2014 大数据会议 (49)
           </li>
-          <li>数据科学关于安全的经典文章列表：Jason Trost整理的和安全有关的重要文章，都有pdf链接，覆盖领域：入侵检测，恶意软件Malware，数据收集，脆弱性分析，隐私与匿名，数据挖掘，网络犯罪，网络战等。入门必读。http://t.cn/RP21a3E (48)
-          </li>
-          <li>续前条。更多的数据可视化方法请参考39 Data Visualization Tools for Big Data http://t.cn/R7E5tgN 其中包括了多种地图可视化工具，如 Polymaps，Google Maps，Leaflet，OpenLayers，Kartograph， Modest Maps, CartoDB等 @地图曾经曰过 (48)
-          </li>
-          <li>15本Hadoop好书。整理者Matthew Rathbone http://t.cn/RvNhW1M (47)
-          </li>
-          <li>//@phunter_lau: 我觉得很好，好比挖掘技术，Alex的讲座偏向于深入挖掘机操作技术，Xavier偏重不同工地的综合挖掘方法，结合自己实际工作的问题理解这两方面都很重要（新浪微博的推荐系统就是第一个理解不深入第二个不屑于去理解，这是反面教材） (44)
-          </li>
-          <li>机器学习头条 2014-11-03 http://t.cn/R7YWAZ5 1)Olivier Grisel简要总结机器学习，深度学习近年进展 2)从拉普拉斯矩阵说到谱聚类 3)SVD介绍PPT 4)张巍介绍HMM 5)MLOSS机器学习开源工具集 加长版26条 http://t.cn/R7YWAZb (42)
-          </li>
-          <li>今年Hadoop Summit的主题演讲视频都在线，一共12个 http://t.cn/R7Oe3LG 具体题目请看图片，涉及云计算的方方面面 (39)
-          </li>
-          <li>数据科学小技巧汇总小小册子 //@phunter_lau: 不错，技巧的占的部分比较大，适合摸爬滚打多年的人看看 (39)
-          </li>
-          <li>目测为会引发极佳讨论的问题，传送门讲收集和增补大家的问答。跟踪页 http://t.cn/R7TfwMN (35)
-          </li>
-          <li>http://t.cn/hRgMJ 可视化方法的元素周期表，总结了6大类100种方法，每种都有图例。打印出来帖在案头吧 (34)
-          </li>
-          <li>跨媒体知识库构建，今年第三个重要教程 //@昊奋: 继SIGMOD和KDD的相关tutorial之后的另外一个关于KG的重量级tutorial，跨媒体知识库构建是一个趋势，特别对于移动互联网时代。不过链接有些贴错，纠正如下 http://t.cn/R7Y4g7n http://t.cn/R7Y4g7E (30)
+          <li>数据科学关于安全的经典文章列表 (48)
           </li>
         </ul><br>
         <h2>
@@ -634,17 +614,7 @@
             </div>
           </div>
         </div><br>
-        <div class="weibo" style="border:1px solid #DDD; position: relative;font-size:12px;background:#eee; padding:5px; word-wrap: break-word;">
-          <div style="margin-left:0px;">
-            <div style="margin:5px;">
-              <img style="width:20px;height:20px; border-radius:2px;padding-right:5px;" src="http://tp1.sinaimg.cn/5220650532/50/5701668539/1" alt=""> <span><span style="font-size:14px;"><b class="screen_name">好东西传送门</b></span> <span style="font-size:12px; color:#777">&nbsp; <a class="datetime" href="http://www.weibo.com/5220650532/BuICza8If">2014-11-04 15:55</a> <span class="reposts_count">&nbsp; 转发: 2</span></span></span>
-            </div>
-            <div class="text" style="font-size:16px; margin:5px;">
-              <!-- background:#CDE472; -->
-              根据我们的非科学统计，在<span style="color:#EB7350;">@好东西传送门</span> 的门友中，各种微博上笔记软件的被使用次数依次是 我的印象笔记 mywiz 有道云笔记收藏 mark，比例为12 : 3 : 1.6 : 1 <span style="color:#EB7350;">@印象笔记</span> 拔得头筹
-            </div>
-          </div>
-        </div><br>
+
         <div class="weibo" style="border:1px solid #DDD; position: relative;font-size:12px;background:#eee; padding:5px; word-wrap: break-word;">
           <div style="margin-left:0px;">
             <div style="margin:5px;">
@@ -945,20 +915,7 @@
             </div>
           </div>
         </div><br>
-        <div class="weibo" style="border:1px solid #DDD; position: relative;font-size:12px;background:#eee; padding:5px; word-wrap: break-word;">
-          <div style="margin-left:0px;">
-            <div style="margin:5px;">
-              <img style="width:20px;height:20px; border-radius:2px;padding-right:5px;" src="http://tp1.sinaimg.cn/5220650532/50/5701668539/1" alt=""> <span><span style="font-size:14px;"><b class="screen_name">好东西传送门</b></span> <span style="font-size:12px; color:#777">&nbsp; <a class="datetime" href="http://www.weibo.com/5220650532/BupDdrnOJ">2014-11-02 15:34</a></span></span>
-            </div>
-            <div class="text" style="font-size:16px; margin:5px;">
-              <!-- background:#CDE472; -->
-              kaggle竞赛的获奖感言。都是些很实在的小经验，小教训，没有空话套话 <a href="http://t.cn/R7WTbV7">http://t.cn/R7WTbV7</a> --kaggle的口号“no free hunch”这些大实话里都体现了
-            </div>
-            <div class="original_pic" style="text-align:left;padding:10px;max-height:420px;overflow:hidden;">
-              <img style="max-width:260px;" src="http://ww1.sinaimg.cn/large/005HjjGQjw1elwoultxfzj30dy1cj0x3.jpg" alt="">
-            </div>
-          </div>
-        </div><br>
+
         <div class="weibo" style="border:1px solid #DDD; position: relative;font-size:12px;background:#eee; padding:5px; word-wrap: break-word;">
           <div style="margin-left:0px;">
             <div style="margin:5px;">
@@ -1063,39 +1020,7 @@
             </div>
           </div>
         </div><br>
-        <div class="weibo" style="border:1px solid #DDD; position: relative;font-size:12px;background:#eee; padding:5px; word-wrap: break-word;">
-          <div style="margin-left:0px;">
-            <div style="margin:5px;">
-              <img style="width:20px;height:20px; border-radius:2px;padding-right:5px;" src="http://tp1.sinaimg.cn/5220650532/50/5701668539/1" alt=""> <span><span style="font-size:14px;"><b class="screen_name">好东西传送门</b></span> <span style="font-size:12px; color:#777">&nbsp; <a class="datetime" href="http://www.weibo.com/5220650532/BumGsv3xY">2014-11-02 08:04</a></span></span>
-            </div>
-            <div class="text" style="font-size:16px; margin:5px;">
-              <!-- background:#CDE472; -->
-              感谢 <span style="color:#EB7350;">@李武军nju</span> <span style="color:#EB7350;">@好东西传送门</span> <span style="color:#EB7350;">@NLPJob</span> <span style="color:#EB7350;">@Kevin_机器学习_CA</span> <span style="color:#EB7350;">@西瓜大丸子汤</span> 另外昨天的重点新闻是第三届全国社会媒体处理大会SMP2014，龙星镖局，刘知远，梁斌等分享了会上的热点。<span style="color:#EB7350;">@小诺_Noah</span> 原来是华为的机器人——李航已经分享了slides，会放入明天的机器学习日报
-            </div>
-          </div>
-          <div class="original" style="background:#DDD; padding: 5px; margin:10px">
-            <div style="margin:5px;">
-              <img style="width:20px;height:20px; border-radius:2px;" src="http://tp1.sinaimg.cn/5220650532/50/5701668539/1" alt=""> <span><span style="font-size:14px; padding:5px;">好东西传送门</span> <span style="font-size:12px; color:#777">&nbsp; 2014-11-02 07:59 <!-- &nbsp; 转发: 1--></span></span>
-            </div>
-            <div style="font-size:14px; margin:5px;">
-              机器学习头条 2014-11-01 <a href="http://t.cn/R7WhOVX">http://t.cn/R7WhOVX</a> 1)李武军谈大数据机器学习 2)三代机器学习算法实现的演化 3)Klein和Manning关于最大熵模型PPT 4)caffe on windows 带cudnn 5)微信公众平台新增语义理解接口 加长版44条 <a href="http://t.cn/R7WhOV6">http://t.cn/R7WhOV6</a>
-            </div>
-          </div>
-        </div><br>
-        <div class="weibo" style="border:1px solid #DDD; position: relative;font-size:12px;background:#eee; padding:5px; word-wrap: break-word;">
-          <div style="margin-left:0px;">
-            <div style="margin:5px;">
-              <img style="width:20px;height:20px; border-radius:2px;padding-right:5px;" src="http://tp1.sinaimg.cn/5220650532/50/5701668539/1" alt=""> <span><span style="font-size:14px;"><b class="screen_name">好东西传送门</b></span> <span style="font-size:12px; color:#777">&nbsp; <a class="datetime" href="http://www.weibo.com/5220650532/BumEy2Omq">2014-11-02 07:59</a> <span class="reposts_count">&nbsp; 转发: 1</span></span></span>
-            </div>
-            <div class="text" style="font-size:16px; margin:5px;">
-              <!-- background:#CDE472; -->
-              机器学习头条 2014-11-01 <a href="http://t.cn/R7WhOVX">http://t.cn/R7WhOVX</a> 1)李武军谈大数据机器学习 2)三代机器学习算法实现的演化 3)Klein和Manning关于最大熵模型PPT 4)caffe on windows 带cudnn 5)微信公众平台新增语义理解接口 加长版44条 <a href="http://t.cn/R7WhOV6">http://t.cn/R7WhOV6</a>
-            </div>
-            <div class="original_pic" style="text-align:left;padding:10px;max-height:420px;overflow:hidden;">
-              <img style="max-width:260px;" src="http://ww2.sinaimg.cn/large/005HjjGQjw1elwbq403ikj30c820ejzu.jpg" alt="">
-            </div>
-          </div>
-        </div><br>
+
         <div class="weibo" style="border:1px solid #DDD; position: relative;font-size:12px;background:#eee; padding:5px; word-wrap: break-word;">
           <div style="margin-left:0px;">
             <div style="margin:5px;">
