--- a/haoweekly_memect_com/2014-11-21.html
+++ b/haoweekly_memect_com/2014-11-21.html
@@ -28,30 +28,34 @@
             <a href="#weibo-3778233264373770">用深度学习将图像翻译成文字</a> (46)
           </li>
           <li>
-            <a href="#weibo-3777444139927702">机器学习日报 2014-11-15</a> (40)
-          </li>
-          <li>
-            <a href="#weibo-3778574865490187">机器学习日报 2014-11-18 </a> (37)
-          </li>
-          <li>
             <a href="#weibo-3777257829497299">为何Python适合初创公司</a> (34)
           </li>
           <li>
-            <a href="#weibo-3778621136860298">移动广告CTR预测模型（重发）</a> (32)
+            <a href="#weibo-3778621136860298">移动广告CTR预测模型</a> (32)
           </li>
           <li>
             <a href="#weibo-3778696378874523">机器学习AMA合集</a> (31)
           </li>
           <li>
-            <a href="#weibo-3779279387032605">机器学习日报 2014-11-20</a> (30)
-          </li>
-          <li>
             <a href="#weibo-3777846613216062">Chris Mellish的机器学习讲义</a> (29)
           </li>
           <li>
-            <a href="#weibo-3778869737374366">Graph Databases图数据库入门免费电子书</a> (29)
+            <a href="#weibo-3778869737374366">图数据库入门免费电子书</a> (29)
           </li>
-      
+		  <li>
+            <a href="#weibo-3778556909777616">科学上网工具Shadowsocks</a> (27)
+          </li>
+          <li>
+            <a href="#weibo-3778540094650858">静态图像生成句子描述几篇重要论文汇总和评价</a> (26)
+          </li>      
+			<li>
+            <a href="#weibo-3777991807238565">微软Xbox推荐系统成长四篇论文</a> (25)
+          </li>
+        </ul>
+
+       <p>订阅：<a href="mailto:hao@memect.com?subject=%E8%AE%A2%E9%98%85%E5%A5%BD%E4%B8%9C%E8%A5%BF%E5%91%A8%E6%8A%A5" target="_blank">hao@memect.com</a> 发封邮件，标题是 " 订阅好东西周报 " </p>
+
+
         <h2>
           2014-11-21 (4)
         </h2>
