--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -17,16 +17,17 @@
 <p>订阅：<a href="mailto:hao@memect.com?subject=%E8%AE%A2%E9%98%85%E5%A5%BD%E4%B8%9C%E8%A5%BF%E5%91%A8%E6%8A%A5%20from%20homepage" target="_blank">hao@memect.com</a> 发封邮件，标题是 " 订阅好东西周报 " </p>
 
 <ul>
-   <li><a href="2014-11-14.html">好东西周报 2014-11-08至2014-11-14</a></li>
-   <li><a href="2014-11-07.html">好东西周报 2014-11-01至2014-11-07</a></li>
-   <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=91bf458822">好东西周报 2014-10-25至2014-10-31</a></li>
-   <li><a href="http://us8.campaign-archive2.com/?u=ceeb9b455c7ed15e9081be0ac&id=f552ee713e">好东西周报 2014-10-18至2014-10-24</a></li>
-   <li><a href="http://us8.campaign-archive2.com/?u=ceeb9b455c7ed15e9081be0ac&id=646138b57c">好东西周报 2014-10-11至2014-10-17</a></li>
-   <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=98ca52c74a">好东西周报 2014-10-04至2014-10-10</a></li>
-   <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=7239c231c9">好东西周报 2014-09-27至2014-10-04</a></li>
-   <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=f4677cfe59">好东西周报 2014-09-20至2014-09-26</a></li>
-   <li><a href="http://us8.campaign-archive2.com/?u=ceeb9b455c7ed15e9081be0ac&id=8d3ee77378">好东西周报 2014-09-13至2014-09-19</a></li>
-   <li><a href="http://us8.campaign-archive2.com/?u=ceeb9b455c7ed15e9081be0ac&id=17333b91dd">好东西周报 2014-09-06至2014-09-12</a></li>
+   <li><a href="2014-11-14.html">好东西周报 2014-11-14</a></li>
+   <li><a href="2014-11-14.html">好东西周报 2014-11-14</a></li>
+   <li><a href="2014-11-07.html">好东西周报 2014-11-07</a></li>
+   <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=91bf458822">好东西周报 2014-10-31</a></li>
+   <li><a href="http://us8.campaign-archive2.com/?u=ceeb9b455c7ed15e9081be0ac&id=f552ee713e">好东西周报 2014-10-24</a></li>
+   <li><a href="http://us8.campaign-archive2.com/?u=ceeb9b455c7ed15e9081be0ac&id=646138b57c">好东西周报 2014-10-17</a></li>
+   <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=98ca52c74a">好东西周报 2014-10-10</a></li>
+   <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=7239c231c9">好东西周报 2014-10-04</a></li>
+   <li><a href="http://us8.campaign-archive1.com/?u=ceeb9b455c7ed15e9081be0ac&id=f4677cfe59">好东西周报 2014-09-26</a></li>
+   <li><a href="http://us8.campaign-archive2.com/?u=ceeb9b455c7ed15e9081be0ac&id=8d3ee77378">好东西周报 2014-09-19</a></li>
+   <li><a href="http://us8.campaign-archive2.com/?u=ceeb9b455c7ed15e9081be0ac&id=17333b91dd">好东西周报 2014-09-12</a></li>
 </ul>
 
 <!-- Piwik -->
