--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -17,6 +17,13 @@
 <p>订阅：<a href="mailto:hao@memect.com?subject=%E8%AE%A2%E9%98%85%E5%A5%BD%E4%B8%9C%E8%A5%BF%E5%91%A8%E6%8A%A5%20from%20homepage" target="_blank">hao@memect.com</a> 发封邮件，标题是 " 订阅好东西周报 " </p>
 
 <ul>
+   <li><a href="2015-01-25.html">好东西周报 2015-01-25</a></li>
+   <li><a href="2015-01-18.html">好东西周报 2015-01-18</a></li>
+   <li><a href="2015-01-11.html">好东西周报 2015-01-11</a></li>
+   <li><a href="2015-01-04.html">好东西周报 2015-01-04</a></li>
+   <li><a href="2014-12-28.html">好东西周报 2014-12-28</a></li>
+   <li><a href="2014-12-21.html">好东西周报 2014-12-21</a></li>
+   <li><a href="2014-12-14.html">好东西周报 2014-12-14</a></li> (改为周一发送)
    <li><a href="2014-12-12.html">好东西周报 2014-12-12</a></li>
    <li><a href="2014-12-05.html">好东西周报 2014-12-05</a></li>
    <li><a href="2014-11-28.html">好东西周报 2014-11-28</a></li>
