--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -23,7 +23,7 @@
    <li><a href="2015-01-04.html">好东西周报 2015-01-04</a></li>
    <li><a href="2014-12-28.html">好东西周报 2014-12-28</a></li>
    <li><a href="2014-12-21.html">好东西周报 2014-12-21</a></li>
-   <li><a href="2014-12-14.html">好东西周报 2014-12-14</a></li> (改为周一发送)
+   <li><a href="2014-12-14.html">好东西周报 2014-12-14</a> (改为周一发送) </li>
    <li><a href="2014-12-12.html">好东西周报 2014-12-12</a></li>
    <li><a href="2014-12-05.html">好东西周报 2014-12-05</a></li>
    <li><a href="2014-11-28.html">好东西周报 2014-11-28</a></li>
