add link to memect.com

--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -10,7 +10,7 @@
 <body style="font-family: Heiti SC,Droidsansfallback,MicrosoftYaHei,Helvetica,Arial,sans-serif; margin-left: auto; margin-right: auto; width: 95%; max-width: 800px;">
 <h2>好东西周报</h2> 
 
-<p><a href="http://www.weibo.com/haoawesome/">@好东西传送门</a> 每周推送总结</p>
+<p><a href="http://www.weibo.com/haoawesome/">@好东西传送门</a> 每周推送总结。在 <a href="http://memect.com" target="_blank">memect.com</a> 主页可以订阅其他日报和周报</p></p>
 
 <p>“好东西传送门”支持微博上的知识传播，集成微博好人好东西，帮您快速解决问题，为您精选专业知识</p>
 
