--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -17,6 +17,7 @@
 <p>订阅：<a href="mailto:hao@memect.com?subject=%E8%AE%A2%E9%98%85%E5%A5%BD%E4%B8%9C%E8%A5%BF%E5%91%A8%E6%8A%A5%20from%20homepage" target="_blank">hao@memect.com</a> 发封邮件，标题是 " 订阅好东西周报 " </p>
 
 <ul>
+   <li><a href="2015-02-08.html">好东西周报 2015-02-08</a></li>
    <li><a href="2015-02-01.html">好东西周报 2015-02-01</a></li>
    <li><a href="2015-01-25.html">好东西周报 2015-01-25</a></li>
    <li><a href="2015-01-18.html">好东西周报 2015-01-18</a></li>
