--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -16,6 +16,8 @@
 
 <p>订阅：<a href="mailto:hao@memect.com?subject=%E8%AE%A2%E9%98%85%E5%A5%BD%E4%B8%9C%E8%A5%BF%E5%91%A8%E6%8A%A5%20from%20homepage" target="_blank">hao@memect.com</a> 发封邮件，标题是 " 订阅好东西周报 " </p>
 
+<p>如果点上面的链接无效，请<a href="http://memect.co/n4BNxmj">点此填表</a>订阅</p>
+
 <ul>
    <li><a href="2015-02-08.html">好东西周报 2015-02-08</a></li>
    <li><a href="2015-02-01.html">好东西周报 2015-02-01</a></li>
