--- a/haoweekly_memect_com/index.html
+++ b/haoweekly_memect_com/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body style="font-family: Heiti SC,Droidsansfallback,MicrosoftYaHei,Helvetica,Arial,sans-serif; margin-left: auto; margin-right: auto; width: 95%; max-width: 800px;">
-<h2>好东西周报</h2> 
+
+<img title="好东西周报" alt="好东西周报" src="images/banner.png">
+
 
 <p><a href="http://www.weibo.com/haoawesome/">@好东西传送门</a> 每周推送总结。在 <a href="http://memect.com" target="_blank">memect.com</a> 主页可以订阅其他日报和周报</p></p>
 
