--- a/haoweekly_memect_com/2015-04-12.html
+++ b/haoweekly_memect_com/2015-04-12.html
@@ -18,7 +18,8 @@
           @<a href="http://www.weibo.com/haoawesome">好东西传送门</a> 出品, 过刊见 <a id="homepage_link" href="http://haoweekly.memect.com" name="homepage_link">http://haoweekly.memect.com</a>
         </p>
         <p>
-          订阅： 发封邮件 <a href="mailto:hao@memect.com?subject=%E8%AE%A2%E9%98%85%E5%A5%BD%E4%B8%9C%E8%A5%BF%E5%91%A8%E6%8A%A5" target="_blank">hao@memect.com</a>，标题是 " 订阅好东西周报 "
+          订阅： 发封邮件 <a href="mailto:hao@memect.com?subject=%E8%AE%A2%E9%98%85%E5%A5%BD%E4%B8%9C%E8%A5%BF%E5%91%A8%E6%8A%A5" target="_blank">hao@memect.com</a>，标题是 " 订阅好东西周报 "， 
+          或<a href="http://eepurl.com/3agBL" target="_blank">点此填表</a>
         </p>
 <br>
         <hr>
